--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,5 @@ rand = "*"
 lazy_static = "1.4.0"
 
 [features]
-default = ["all"]
-all = ["cpu", "opencl"]
-cpu = []
+default = ["opencl"]
 opencl = []
