removed rand dep

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "*"
+#rand = "*"
 lazy_static = "1.4.0"
 
 [features]
 default = ["opencl"]
 opencl = []
 safe = []
+
+
+[dev-dependencies]
+criterion = "0.3"
+
+
+[[bench]]
+name = "safe_vs_cache"
+harness = false
