--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,23 @@ opencl = []
 safe = []
 
 
+[[example]]
+name = "unified_memory"
+required-features = ["opencl"]
+
+[[example]]
+name = "simple"
+required-features = ["opencl"]
+
+[[example]]
+name = "opencl_kernel_launch"
+required-features = ["opencl"]
+
+[[example]]
+name = "cl_device"
+required-features = ["opencl"]
+
+
 [dev-dependencies]
 criterion = "0.3"
 
