added basic cuda

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ readme = "README.md"
 lazy_static = "1.4.0"
 
 [features]
-default = ["opencl"]
+default = ["opencl", "cuda"]
 opencl = []
+cuda = []
 safe = []
 
 
