--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,3 +54,8 @@ harness = false
 name = "gemm"
 harness = false
 required-features = ["opencl", "cuda"]
+
+[[bench]]
+name = "cuda_vs_opencl"
+harness = false
+required-features = ["opencl", "cuda"]
