--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT"
 description = "A minimal OpenCL, CUDA and host CPU array manipulation engine / framework."
 repository = "https://github.com/elftausend/custos"
 keywords = ["CUDA", "OpenCL", "arrays", "matrix-computations", "deep-learning"]
-categories = ["Mathematics", "Memory management", "FFI"]
+categories = ["mathematics", "memory-management", "external-ffi-bindings"]
 readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -71,3 +71,8 @@ required-features = ["opencl", "cuda"]
 name = "cuda_vs_opencl"
 harness = false
 required-features = ["opencl", "cuda"]
+
+[[bench]]
+name = "cl_set_kernel_arg"
+harness = false
+required-features = ["opencl"]
