--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 lazy_static = "1.4.0"
 
 [features]
-default = ["opencl", "cuda"]
+default = ["opencl"]
 opencl = []
 cuda = []
 safe = []
@@ -71,3 +71,7 @@ required-features = ["opencl", "cuda"]
 name = "cuda_vs_opencl"
 harness = false
 required-features = ["opencl", "cuda"]
+
+[[bench]]
+name = "hash"
+harness = false
