--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose --no-default-features
+      
+  test:
+  
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
     - name: Run tests
       run: cargo test --verbose --no-default-features
