--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 lazy_static = "1.4.0"
 
 [features]
-default = []
+default = ["opencl", "cuda"]
 opencl = []
 cuda = []
 realloc = []
