--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,7 +36,8 @@ jobs:
 
     - name: Run tests
       run: cargo test --verbose --no-default-features
-  bench:
+
+  test-realloc:
   
     runs-on: ubuntu-latest
     
@@ -50,5 +51,22 @@ jobs:
 
     - uses: Swatinem/rust-cache@v1
 
-    - name: Run benchmarks
-      run: cargo bench --verbose --no-default-features
+    - name: Run 'realloc' tests
+      run: cargo test --verbose --no-default-features --features realloc
+
+#  bench:
+#  
+#    runs-on: ubuntu-latest
+#    
+#    steps:
+#    - uses: actions/checkout@v3
+#
+#    - uses: actions-rs/toolchain@v1
+#      with:
+#        profile: minimal
+#        toolchain: stable
+#
+#    - uses: Swatinem/rust-cache@v1
+#
+#    - name: Run benchmarks
+#      run: cargo bench --verbose --no-default-features
