--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "1.4.0"
+lazy_static = { version = "1.4.0", optional = true }
 
 [features]
 default = ["opencl", "cuda"]
-opencl = []
+opencl = ["dep:lazy_static"]
 cuda = []
 realloc = []
 
