--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "custos"
-version = "0.4.6"
+version = "0.5.0"
 edition = "2021"
 license = "MIT"
 description = "A minimal OpenCL, CUDA and host CPU array manipulation engine / framework."
@@ -14,7 +14,7 @@ readme = "README.md"
 lazy_static = { version = "1.4.0", optional = true }
 
 [features]
-default = ["opencl"]
+default = ["opencl", "cuda"]
 opencl = ["dep:lazy_static"]
 cuda = []
 realloc = []
