--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,15 @@ readme = "README.md"
 [dependencies]
 lazy_static = { version = "1.4.0", optional = true }
 
+[build-dependencies]
+custos = { version="0.1.4", default-features=false, features=["opencl"] }
+
 [features]
-default = ["opencl"]
+default = ["opencl", "opt-cache"]
 opencl = ["dep:lazy_static"]
 cuda = []
 realloc = []
 opt-cache = []
-#unified-mem = []
 
 [[example]]
 name = "cuda_readme"
@@ -47,10 +49,6 @@ required-features = ["opencl"]
 
 [dev-dependencies]
 #criterion = "0.3"
-
-[build-dependencies]
-custos = { version="0.1.4", default-features=false, features=["opencl"] }
-
 
 #[[bench]]
 #name = "fixed_size_vs_vec"
