--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ lazy_static = { version = "1.4.0", optional = true }
 custos = { version="0.1.4", default-features=false, features=["opencl"] }
 
 [features]
-default = ["opencl", "opt-cache"]
+default = []
 opencl = ["dep:lazy_static"]
 cuda = []
 realloc = []
