--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,7 +34,7 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         profile: minimal
-        toolchain: stable
+        toolchain: beta
 
     - uses: Swatinem/rust-cache@v1
 
@@ -51,7 +51,7 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         profile: minimal
-        toolchain: stable
+        toolchain: beta
 
     - uses: Swatinem/rust-cache@v1
 
@@ -68,7 +68,7 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         profile: minimal
-        toolchain: stable
+        toolchain: beta
 
     - uses: Swatinem/rust-cache@v1
 
@@ -102,7 +102,7 @@ jobs:
 #    - uses: actions-rs/toolchain@v1
 #      with:
 #        profile: minimal
-#        toolchain: stable
+#        toolchain: beta
 #
 #    - uses: Swatinem/rust-cache@v1
 #
