--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,17 @@ readme = "README.md"
 lazy_static = { version = "1.4.0", optional = true }
 
 [build-dependencies]
+# TODO: use opencl only lib
 custos = { version="0.5.0", default-features=false }
 
 [features]
-default = ["cuda", "opencl"]
+default = ["blas", "opencl", "static_api"]
 opencl = ["dep:lazy_static", "custos/opencl"]
 cuda = []
 realloc = []
 opt-cache = []
 blas = []
+static_api = []
 
 [[example]]
 name = "cuda_readme"
