--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,13 @@ lazy_static = { version = "1.4.0", optional = true }
 custos = { version="0.5.0", default-features=false }
 
 [features]
-default = ["blas", "opencl", "static_api"]
+default = ["blas", "opencl", "static-api"]
 opencl = ["dep:lazy_static", "custos/opencl"]
 cuda = []
 realloc = []
 opt-cache = []
 blas = []
-static_api = []
+static-api = []
 
 [[example]]
 name = "cuda_readme"
