--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ lazy_static = { version = "1.4.0", optional = true }
 custos = { version="0.5.0", default-features=false }
 
 [features]
-default = ["blas"]
+default = ["blas", "opencl", "static-api"]
 opencl = ["dep:lazy_static", "custos/opencl"]
 cuda = []
 realloc = []
