--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,14 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = { version = "1.4.0", optional = true }
 
 [build-dependencies]
 # TODO: use opencl only lib
 custos = { version="0.5.0", default-features = false }
 
 [features]
-default = ["blas", "opencl", "static-api"]
-opencl = ["dep:lazy_static", "custos/opencl"]
+default = ["blas", "static-api", "opencl"]
+opencl = ["custos/opencl"]
 cuda = []
 realloc = []
 opt-cache = []
