--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ readme = "README.md"
 custos = { version="0.5.0", default-features = false }
 
 [features]
-default = ["blas", "stack-alloc", "static-api", "opencl"]
+default = ["blas", "stack-alloc", "static-api", "opencl", "cuda"]
 opencl = ["custos/opencl"]
 cuda = []
 realloc = []
