--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ rust-version = "1.65"
 custos = { version="0.5.0", default-features = false }
 
 [features]
-default = ["blas", "static-api", "opencl", ]
+default = ["blas", "cuda", "opencl", "opt-cache"]
 opencl = ["custos/opencl"]
 cuda = []
 realloc = []
