--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 lazy_static = { version = "1.4.0", optional = true }
 
 [features]
-default = ["opencl"]
+default = ["opencl", "cuda"]
 opencl = ["dep:lazy_static"]
 cuda = []
 realloc = []
