--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ rust-version = "1.65"
 
 [build-dependencies]
 # TODO: use opencl only lib
-custos = { version="0.5.0", default-features = false }
+custos = { version="0.5.0", default-features = false, optional=true }
 
 [features]
-default = ["blas", "cuda", "opencl", "opt-cache"]
+default = ["blas", "opencl"]
 opencl = ["custos/opencl"]
 cuda = []
 realloc = []
