--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,15 +19,15 @@ rust-version = "1.65"
 custos = { version="0.5.0", default-features = false, optional=true }
 
 [features]
-default = ["blas", "opencl"]
+default = ["blas", "opencl", "stack"]
 opencl = ["custos/opencl"]
 cuda = []
 realloc = []
 opt-cache = []
 blas = []
 static-api = []
-stack-alloc = []
-no-std = ["stack-alloc"]
+stack = []
+no-std = ["stack"]
 
 [dev-dependencies]
 #criterion = "0.3"
