--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,6 +28,8 @@ jobs:
       run: cargo build --verbose --no-default-features --features opt-cache
     - name: Build (realloc)
       run: cargo build --verbose --no-default-features --features realloc
+    - name: Build (stack)
+      run: cargo build --verbose --no-default-features --features stack
       
   test:
   
@@ -80,6 +82,40 @@ jobs:
     - name: Run 'opt-cache' tests
       run: cargo test --verbose --no-default-features --features opt-cache
 
+  test-stack:
+  
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+
+    - uses: Swatinem/rust-cache@v1
+
+    - name: Run 'stack' tests
+      run: cargo test --no-default-features --features stack
+
+  test-static-api:
+  
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+
+    - uses: Swatinem/rust-cache@v1
+
+    - name: Run 'static-api' tests
+      run: cargo test --no-default-features --features static-api
+
   miri:
     name: "Miri"
     runs-on: ubuntu-latest
@@ -96,6 +132,10 @@ jobs:
         run: cargo miri test --no-default-features --features realloc
       - name: Test 'opt-cache' with Miri
         run: cargo miri test --no-default-features --features opt-cache
+      - name: Test 'stack' with Miri
+        run: cargo miri test --no-default-features --features stack
+      - name: Test 'static-api' with Miri
+        run: cargo miri test --no-default-features --features static-api
 
 #  bench:
 #  
