--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ rust-version = "1.65"
 custos = { version="0.5.0", default-features = false, optional=true }
 
 [features]
-default = ["blas", "opencl", "stack", "static-api", "realloc", "cuda"]
+default = ["blas", "opencl", "stack", "static-api", "realloc", "opt-cache"]
 opencl = ["custos/opencl"]
 cuda = []
 realloc = []
