--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,14 @@ rust-version = "1.65"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+cuwanto-server = {path="../cuwanto/cuwanto-server"}
 
 [build-dependencies]
 # TODO: use opencl only lib
 custos = { version="0.5.0", default-features = false, optional=true }
 
 [features]
-default = ["blas", "opencl", "stack", "static-api", "realloc", "opt-cache"]
+default = ["blas", "stack", "static-api", "opencl", "opt-cache"]
 opencl = ["custos/opencl"]
 cuda = []
 realloc = []
