--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ min-cl = { path = "../min-cl", optional=true }
 futures-intrusive = {version="0.5.0", optional=true}
 pollster = {version="0.2.5", optional=true }
 wgpu = {version="0.14.2", optional=true }
+
 num-traits = { version="0.2", default-features=false, optional=true}
 
 [build-dependencies]
@@ -26,7 +27,7 @@ min-cl = { path = "../min-cl", optional=true }
 
 
 [features]
-default = ["cpu", "stack"]
+default = ["cpu", "stack", "opencl"]
 #default = ["no-std", "stack"]
 cpu = []
 opencl = ["dep:min-cl"]
