--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,16 +20,17 @@ futures-intrusive = {version="0.5.0", optional=true}
 pollster = {version="0.2.5", optional=true }
 wgpu = {version="0.14.2", optional=true }
 
-num-traits = { version="0.2", default-features=false, optional=true}
-
 custos-macro = {path = "../custos-macro", optional=true}
+
+# no-std float math
+libm = { version="0.2.6", optional = true }
 
 [build-dependencies]
 min-cl = { path = "../min-cl", optional=true }
 
 
 [features]
-default = ["cpu", "stack", "blas", "realloc"]
+default = ["no-std"]
 #default = ["no-std", "stack"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
@@ -40,7 +41,7 @@ opt-cache = []
 blas = []
 static-api = []
 stack = []
-no-std = ["stack", "dep:num-traits"]
+no-std = ["stack", "dep:libm"]
 wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
 macro = ["dep:custos-macro"]
 
