--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ min-cl = { path = "../min-cl", optional=true }
 
 [features]
 #default = ["stack", "cpu", "opencl"]
-default = ["stack"]
+default = ["stack", "cpu", "cuda"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
 #network = ["cuwanto-server"]
