--- a/examples/demo_operations/Cargo.toml
+++ b/examples/demo_operations/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-custos = {path = "../../"}
+custos = {path = "../../", default-features=false, features=["cpu", "stack"]}
+custos-macro = {path = "../../../custos-macro"}
+
+[features]
+default = ["cpu", "stack"]
+opencl = []
+cpu = []
+stack = []
