--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ min-cl = { path = "../min-cl", optional=true }
 
 [features]
 #default = ["stack", "cpu", "opencl"]
-default = ["cpu", "opencl", "stack", "macro",]
+default = ["cpu", "opencl", "stack", "macro", "autograd"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
 #network = ["cuwanto-server"]
