--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,25 +13,26 @@ rust-version = "1.65"
 
 [dependencies]
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
-min-cl = { path = "../min-cl", optional=true }
+min-cl = { version="0.1.0", optional=true }
 
 # WGPU deps
 futures-intrusive = {version="0.5.0", optional=true}
 pollster = {version="0.2.5", optional=true }
 wgpu = {version="0.14.2", optional=true }
 
-custos-macro = {path = "../custos-macro", optional=true}
+#custos-macro = {path = "../custos-macro", optional=true}
+custos-macro = {version = "0.1.0", optional=true}
 
 # no-std float math
 libm = { version="0.2.6", optional = true }
 
 [build-dependencies]
-min-cl = { path = "../min-cl", optional=true }
+min-cl = { version="0.1.0", optional=true }
 
 
 [features]
 #default = ["stack", "cpu", "opencl"]
-default = ["stack", "cpu", "opencl"]
+default = ["stack", "cpu", "opt-cache", "blas", "static-api", "opencl"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
 #network = ["cuwanto-server"]
@@ -47,7 +48,8 @@ macro = ["dep:custos-macro"]
 
 [dev-dependencies]
 #criterion = "0.3"
-custos-macro = {path = "../custos-macro"}
+#custos-macro = {path = "../custos-macro"}
+custos-macro = {version = "0.1.0"}
 
 [[example]]
 name = "cuda_readme"
