--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ rust-version = "1.65"
 
 [dependencies]
 #cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
-min-cl = { version="0.1.1", optional=true }
+min-cl = { version="0.1.2", optional=true }
 
 # WGPU deps
 futures-intrusive = {version="0.5.0", optional=true}
@@ -27,12 +27,12 @@ custos-macro = {version = "0.1.0", optional=true}
 libm = { version="0.2.6", optional = true }
 
 [build-dependencies]
-min-cl = { version="0.1.1", optional=true }
+min-cl = { version="0.1.2", optional=true }
 
 
 [features]
 #default = ["stack", "cpu", "opencl"]
-default = ["cpu", "opencl", "stack", "static-api", "cuda"]
+default = ["cpu", "opencl", "stack", "static-api"]
 #default = ["stack", "cpu", "opt-cache", "blas", "static-api", "opencl"]
 cpu = []
 opencl = ["dep:min-cl", "cpu"]
