--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,3 +122,6 @@ harness = false
 #name = "cuda_vs_opencl"
 #harness = false
 #required-features = ["opencl", "cuda"]
+
+[package.metadata.docs.rs]
+rustc-args = ["--cfg", "docsrs"]
